--- a/www/index.html
+++ b/www/index.html
@@ -137,7 +137,7 @@
     
     <div>
         <h3>Server URL for upload.php:</h3>
-        <input id="serverUrl" type="text" value="http://test.richi.com/" />
+        <input id="serverUrl" type="text" value="http://test.richi.com/lalala" />
     </div>
     <br/>
 
